# Testing

./: CMakeLists.txt  COMPLETE_TEST_DOCUMENTATION.md  FEATURES.md  FINAL_REPORT.docx  FINAL_TEST_RESULTS.md  INSTALL.md  ISO_VERIFICATION_RESULTS.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  config.txt  run_decoder.sh  test.sh  test_results.json  test_simple  test_simple.cpp  test_with_iso  test_with_iso.cpp  verify_structure.sh
.emergent/: emergent.yml
frontend/: .env
include/: BarcodeDecoder.h  CodeLocator.h  ISOVerifier.h  ImagePreprocessor.h
src/: BarcodeDecoder.cpp  CodeLocator.cpp  ISOVerifier.cpp  ImagePreprocessor.cpp  main.cpp
